fixed dark mode of art feature

--- a/css/art-feature.css
+++ b/css/art-feature.css
@@ -3,11 +3,19 @@
 :root {
   --color-bg: #fff;
   --color-text: #000;
+  --color-border: #000;
+  --color-output-bg: #fff;
 }
 
 .dark-theme {
   --color-bg: #1c1b22;
   --color-text: #e1e1ec;
+  --color-border: #e1e1ec;
+  --color-output-bg: #e1e1ec;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
 
 body {
@@ -42,7 +50,7 @@ body {
 }
 
 .html-container {
-  border: 4px solid var(--color-black);
+  border: 4px solid var(--color-border);
   border-radius: 8px;
   padding: 30px;
   margin-right: 20px;
@@ -53,13 +61,17 @@ body {
 }
 
 .html-container-textarea {
-  border: 4px solid var(--color-black);
+  color: var(--color-text);
+  background-color: var(--color-bg);
+  border: 4px solid var(--color-border);
   border-radius: 8px;
   padding: 8px;
 }
 
 .html-container input {
-  border: 4px solid var(--color-black);
+  color: var(--color-text);
+  background-color: var(--color-bg);
+  border: 4px solid var(--color-border);
   border-radius: 5px;
   text-align: center;
   padding: 10px 0;
@@ -72,7 +84,7 @@ body {
 }
 
 .output-container {
-  border: 4px solid var(--color-black);
+  border: 4px solid var(--color-border);
   border-radius: 8px;
   padding: 30px;
   width: 300px;
@@ -80,8 +92,9 @@ body {
 }
 
 #output {
+  background-color: var(--color-output-bg);
   height: 325px;
-  border: 4px solid var(--color-black);
+  border: 4px solid var(--color-border);
   border-radius: 8px;
 }
 
@@ -134,23 +147,31 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 5px;
+  border-radius: 10px;
   overflow: auto;
   width: 70vw;
   height: 70vh;
-  background-color: var(--color-white);
+  color: var(--color-text);
+  background-color: var(--color-bg);
   box-shadow: 0 12px 16px 0 rgba(var(--color-black-rgb), 0.24),
     0 17px 50px 0 rgba(var(--color-black-rgb), 0.19);
+}
+
+.instruction-heading {
+  margin-top: 35px;
+  text-align: center;
 }
 
 .close {
   position: absolute;
   top: 1.5rem;
   right: 2rem;
-  color: var(--color-grey);
+  cursor: pointer;
+  color: var(--color-text);
   border: none;
   background-color: transparent;
   font-size: 3rem;
+  font-weight: 900;
 }
 
 .close:hover,
